--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
         stage('Commit') {
             steps {
                 echo 'Commit stage'
-                sh './mvnw -B package'
+                sh './employees/mvnw -B package'
             }
         }
         stage('Acceptance') {
